--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <option value='12'>12</option>
       </select>
       <label for="no">No</label>
-      <input type="radio" id="no" name="chainMult" value="false" />
+      <input type="radio" id="multNo" name="chainMult" value="false" />
       <br />
 
       <!-- Submit Button -->
