centered on page, modified link

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
     <footer>
       <div>
         <div>
-          <a class="info" name="github" href="https://github.com/sidneyhopkins">
+          <a class="info" name="github" href="https://github.com/sidneyhopkins" target="_blank">
             <span class="material-icons"> palette </span>
-            <span>Sidney Hopkins</span>
+            <span>Sidney's GitHub</span>
           </a>
 
           <a
@@ -114,7 +114,7 @@
             value="sidhopkins14@gmail.com"
           >
             <span class="material-icons"> email </span>
-            <span>click to copy</span>
+            <span>Copy Sidney's Email</span>
             <div id="pop-div">
               <span id="popup">Sidney's email copied to clipboard</span>
             </div>
